force-app/main/default/objects/Credit_Risk_Log__c/Credit_Risk_Log__c.object-meta.xml
<CustomObject>
    <description>Records every credit risk API assessment attempt for a Contact, including successful callouts and failures. Provides a full audit trail of risk decisions.</description>
    <label>Credit Risk Log</label>
    <nameField>
        <displayFormat>CRL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Risk Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>