force-app/main/default/objects/Credit_Risk_Log__c/fields/API_Answer__c.field-meta.xml
<CustomField>
    <fullName>API_Answer__c</fullName>
    <label>API Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>