force-app/main/default/objects/Credit_Risk_Log__c/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <label>API Response (Raw JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>