force-app/main/default/objects/Credit_Risk_Log__c/fields/Callout_Success__c.field-meta.xml
<CustomField>
    <fullName>Callout_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Callout Success</label>
    <type>Checkbox</type>
</CustomField>