force-app/main/default/objects/Credit_Risk_Log__c/fields/Callout_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timestamp__c</fullName>
    <label>Callout Timestamp</label>
    <type>DateTime</type>
</CustomField>