force-app/main/default/objects/Credit_Risk_Log__c/fields/HTTP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status_Code__c</fullName>
    <label>HTTP Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>